develop: refactor and readme